--- a/MassTransit/MassTransitRabbitMQ/appsettings.json
+++ b/MassTransit/MassTransitRabbitMQ/appsettings.json
@@ -7,6 +7,8 @@
   },
   "RabbitMqSettings": {
     "Uri": "localhost",
+    "Port": "15672",
+    "VHost": "/",
     "UserName": "guest",
     "Password": "guest"
   },
