--- a/MassTransit/MassTransit.SharedModels/MassTransit.SharedModels.csproj
+++ b/MassTransit/MassTransit.SharedModels/MassTransit.SharedModels.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.0.16" />
+  </ItemGroup>
+
 </Project>
