--- a/MassTransit/MassTransitRabbitMQ/appsettings.json
+++ b/MassTransit/MassTransitRabbitMQ/appsettings.json
@@ -5,12 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "RabbitMqSettings": {
+  "RabbitMqSettingsOne": {
     "Uri": "localhost",
     "Port": "15672",
     "VHost": "/",
     "UserName": "guest",
     "Password": "guest"
+  },
+  "RabbitMqSettingsTwo": {
+    "Uri": "localhost",
+    "Port": "15672",
+    "VHost": "/",
+    "UserName": "test",
+    "Password": "test"
   },
   "Endpoints": {
     "Queue1": "rabbitmq://localhost/q1"
